Feature: add check CondorStatus